Add workaround to warning
Signed-off-by: TheKodeToad <TheKodeToad@proton.me>